# pygrex

./: .coveragerc  .gitignore  README.md  _launch.sbatch  pyproject.toml
.github/workflows/: publish_to_pypi.yml  test.yml
configs/: config.yml
notebooks/: 0. Reading Data.ipynb  1. ALSExplain.ipynb  2. EMF.ipynb  3. Post-Hoc Explanations.ipynb  4. Extending.ipynb  5. GCERS.ipynb  6. SlidingWindowGCERS.ipynb  7. from-scrach.ipynb  Sliding Window.ipynb  slinding-window_emf_mts.py
notebooks/configs/: config.yml
notebooks/old_examples/: 1. ALSExplain.ipynb
notebooks/sandbox/: refactored-sw-als.py  results-emf-mts-window-3-fixed.txt  sliding-window.py  sliding-window_als.py  sliding-window_als_data_group_test.py  sliding-window_emf.py  trending_analyser.py  trending_score.py
notebooks/sandbox/configs/: config.yml
notebooks/sandbox/experimental-scripts/: sliding-window_als.py  sliding-window_als_data_group_test.py  trending_analyser.py  trending_analyser_ongoing.py  trending_score.py  trending_score_class.py
notebooks/sandbox/results-logs/: results-als-refactored-window-3.txt  results-als-window-3.txt  results-knn-window-3-fixed.txt
py-grex/data_reader/: __init__.py
py-grex/models/: als_model.py  emf_model.py  mf_implicit_model.py  mlp_model.py
py-grex/recommender/: genericrecommender.py
pygrex/data_reader/: data_reader.py  group_interaction_handler.py
pygrex/evaluator/: sliding_window_evaluator.py  splitter.py
pygrex/explain/: sliding_window_explainer.py
pygrex/models/: autoencoder_model.py  emf_model.py  gmf_model.py  mf_implicit_model.py  py_torch_model.py  recommender_model.py
pygrex/recommender/: group_recommender.py  recommender.py
pygrex/utils/: scale.py  sliding_window.py
recoxplainer/data_reader/: data_reader.py  data_reader_old.py  group_interaction_handler.py
recoxplainer/models/: emf_model.py  gmf_model.py  mf_implicit_model.py  mlp_model.py
scripts/: depedencies.sh  experiments.bat  experiments.sh  init.bat  init.sh  install-dependencies.bat  install_dependencies.bat  run_test.bat
test/: test_als_explain.py  test_emf.py  test_gmf.py  test_implicit_models.py
test/data_reader/: test_data_reader.py  test_data_reader_short.py  test_group_interaction_handler.py  test_user_item_matrix.py
test/datasets/: test_user_item_matrix.py
test/evaluator/: test_sliding_window_evaluator.py
test/explain/: test_sliding_window_explainer.py
test/integration/explain/: test_als_explain.py
test/integration/recommender/: test_als.py  test_autoencoder.py  test_emf.py  test_gmf.py  test_implicit_models.py  test_mlp.py
test/recommender/: test_group_recommender.py
test/unit/data_reader/: test_data_reader.py  test_group_interaction_handler.py
test/utils/: test_scale.py  test_sliding_window.py
